fix eye alignment

--- a/css/utility.css
+++ b/css/utility.css
@@ -28,7 +28,7 @@
 
 /* PADDINGS AND BORDERS */
 .mega-padding{
-  padding: 2em;
+  padding: 1.6em 2em;
 }
 .bordered{
   border: 1px solid #B0A7AC;
